--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/bbreuer/tesla-mockup/blob/main/dist/index.html">
+<meta http-equiv="refresh" content="0; url=dist/index.html">
